# HyperGuard-

./: .gitignore  PITCH.md  PRESENTATION.md  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  graph.py  main.py  runtime.py  schemas.py  state.py
backend/app/agents/: arbiter.py  base.py  digital_twin.py  educator.py  guardian.py  negotiator.py  recovery.py
backend/app/api/: admin.py  deps.py  routes.py  twilio_voice.py  users.py  wallet.py  ws.py
backend/app/data/: seed_data.py
backend/app/domain/: events.py
backend/app/integrations/: event_bus.py  notifications.py  persistence.py  voice.py
backend/app/services/: baselines.py  dialogue.py  llm.py  phone.py  reasoning.py  risk_engine.py  scam_taxonomy.py
backend/app/wallet/: followup.py  registry.py  repository.py  seed_supabase.py  store.py
backend/db/: schema.sql
backend/tests/: test_risk_engine.py  test_swarm.py  test_wallet.py
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ThemeToggle.tsx
frontend/lib/: admin.ts  api.ts  format.ts  types.ts  useSwarmStream.ts
infra/: .env.example  schema.sql
mobile/: .gitignore  README.md  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  add-contact.tsx  add-recipient.tsx  select-user.tsx  (+1 more)
video/: README.md  composition.html  narrate.mjs  package-lock.json  package.json  render.mjs  script.mjs  shoot.mjs  timeline.json
(+52 files in other folders)
