[project]
name = "hyperguard-backend"
version = "1.0.0"
description = "HyperGuard, autonomous fraud intervention swarm (FastAPI + LangGraph)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
